<resources>
    <string name="app_name">Ma Réu</string>
    <string name="add_meeting">Ajouter une réunion</string>
    <string name="subject">Sujet</string>
    <string name="room">Salle</string>
    <string name="save">Enregistrer la réunion</string>
    <string name="save_new_meeting">Sauvegarde de la réunion</string>
          <string name="participants">Emails des participants</string>
          <string name="date">Date</string>
          <string name="heure">Heure</string>
          <string name="err_subject">Merci de saisir un sujet à la réunion</string>
          <string name="err_room">Merci de sélectionner une salle</string>
          <string name="err_date">"Merci d'entrer une date "</string>
          <string name="err_hour">Merci de sélectionner une heure</string>
          <string name="filterbydate">Filtrer par date</string>
          <string name="filterbyroom">Filtrer par salle</string>
          <string name="err_emails">Merci d\'entrer au moins deux participants</string>
          <string name="meeting_deleted">La réunion a bien été supprimée</string>
          <string name="err_format_email">Merci de saisir une adresse email</string>
    <string name="sortbyroom">Trier par salle</string>
    <string name="sortbydate">Trier par date</string>
    <string name="remove_filters">Effacer les filtres</string>
    <string name="sort">Trier</string>
    <string name="filter">Filtrer</string>
</resources>