<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          xmlns:app="http://schemas.android.com/apk/res-auto"
          xmlns:tools="http://schemas.android.com/tools"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:padding="16dp"
          tools:context=".AddMeetingActivity">

          <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_addmeeting_textinputlayout_subject"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/addmeeting_margin_vertical"
                    android:hint="@string/subject"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                              android:id="@+id/activity_addmeeting_edittext_subject"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textCapSentences"
                              android:maxLines="1"/>

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_addmeeting_textinputlayout_datepicker"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/addmeeting_margin_vertical"
                    android:hint="@string/date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_addmeeting_textinputlayout_subject">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                              android:id="@+id/activity_addmeeting_edittext_datepicker"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="none" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_addmeeting_textinputlayout_timepicker"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/addmeeting_margin_vertical"
                    android:hint="@string/heure"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_addmeeting_textinputlayout_datepicker">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                              android:id="@+id/activity_addmeeting_edittext_timepicker"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="none" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_addmeeting_textinputlayout_room"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/addmeeting_margin_vertical"
                    android:hint="@string/room"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_addmeeting_textinputlayout_timepicker">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                              android:id="@+id/activity_addmeeting_spinner_room"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="none" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/activity_addmeeting_textinputlayout_participants"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/addmeeting_margin_vertical"
                    android:hint="@string/participants"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/activity_addmeeting_textinputlayout_room">

                    <com.google.android.material.textfield.TextInputEditText
                              android:id="@+id/activity_addmeeting_edittext_email"
                              android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:inputType="textEmailAddress"
                              android:lines="1" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.chip.ChipGroup
                    android:id="@+id/activity_addmeeting_chipgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/activity_addmeeting_textinputlayout_participants"/>

</androidx.constraintlayout.widget.ConstraintLayout>